--- a/LABS-From-01December/Vector_Rag/2_RAG_Text_Splitter.ipynb
+++ b/LABS-From-01December/Vector_Rag/2_RAG_Text_Splitter.ipynb
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "83865b06",
    "metadata": {},
    "outputs": [],
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "4e76dacb",
    "metadata": {},
    "outputs": [],
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "eca37295",
    "metadata": {},
    "outputs": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "bdef6e0b",
    "metadata": {},
    "outputs": [
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "ffc2ada9",
    "metadata": {},
    "outputs": [],
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "d8ab54e5",
    "metadata": {},
    "outputs": [
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "8d1c276e",
    "metadata": {},
    "outputs": [
@@ -284,7 +284,183 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "--- Using Sentence-based Splitting ---\n",
+      "--- Using Sentence-based Splitting ---\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "28ea8fb91d0e469b96f9d57e659e6189",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "modules.json:   0%|          | 0.00/349 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\vyanktesh.l\\Documents\\FDE\\genai_env\\Lib\\site-packages\\huggingface_hub\\file_download.py:143: UserWarning: `huggingface_hub` cache-system uses symlinks by default to efficiently store duplicated files but your machine does not support them in C:\\Users\\vyanktesh.l\\.cache\\huggingface\\hub\\models--sentence-transformers--all-mpnet-base-v2. Caching files will still work but in a degraded version that might require more space on your disk. This warning can be disabled by setting the `HF_HUB_DISABLE_SYMLINKS_WARNING` environment variable. For more details, see https://huggingface.co/docs/huggingface_hub/how-to-cache#limitations.\n",
+      "To support symlinks on Windows, you either need to activate Developer Mode or to run Python as an administrator. In order to activate developer mode, see this article: https://docs.microsoft.com/en-us/windows/apps/get-started/enable-your-device-for-development\n",
+      "  warnings.warn(message)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "487f42bc125948839bad758b88a457a0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "config_sentence_transformers.json:   0%|          | 0.00/116 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d119026cd1494e2195f53006d3af4c66",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "README.md: 0.00B [00:00, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "be10d54a7c1f4b46a0a432c1bd97c4a0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "sentence_bert_config.json:   0%|          | 0.00/53.0 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "102234a884c942e78a0974dbf1b9258b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "config.json:   0%|          | 0.00/571 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Xet Storage is enabled for this repo, but the 'hf_xet' package is not installed. Falling back to regular HTTP download. For better performance, install the package with: `pip install huggingface_hub[hf_xet]` or `pip install hf_xet`\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c3c40052edd5496eb71bd340fc29d520",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model.safetensors:   0%|          | 0.00/438M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "26a919eb88bc4821add4a9f7c291a8a9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "tokenizer_config.json:   0%|          | 0.00/363 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "14ace3e126f94c698f4be9d5c5bc0db0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "vocab.txt: 0.00B [00:00, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b443d34616cc4c7198fa927bd58b3806",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "tokenizer.json: 0.00B [00:00, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "71230d894f8043669cc2367f4f41f4c8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "special_tokens_map.json:   0%|          | 0.00/239 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "61247e4da6474c7bae7c931002a33fb5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "config.json:   0%|          | 0.00/190 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
       "--- Creating vector store chroma_db_sent ---\n",
       "--- Finished creating vector store chroma_db_sent ---\n"
@@ -311,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "5bab23e7",
    "metadata": {},
    "outputs": [
@@ -355,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "31e12d32",
    "metadata": {},
    "outputs": [
@@ -400,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "050e9139",
    "metadata": {},
    "outputs": [
@@ -434,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "248bacab",
    "metadata": {},
    "outputs": [],
@@ -464,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "9461883d",
    "metadata": {},
    "outputs": [],
@@ -476,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "d4e1cb18",
    "metadata": {},
    "outputs": [
@@ -492,7 +668,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\admin\\AppData\\Local\\Temp\\ipykernel_28056\\760185032.py:6: LangChainDeprecationWarning: The class `Chroma` was deprecated in LangChain 0.2.9 and will be removed in 1.0. An updated version of the class exists in the `langchain-chroma package and should be used instead. To use it run `pip install -U `langchain-chroma` and import as `from `langchain_chroma import Chroma``.\n",
+      "C:\\Users\\vyanktesh.l\\AppData\\Local\\Temp\\ipykernel_43180\\760185032.py:6: LangChainDeprecationWarning: The class `Chroma` was deprecated in LangChain 0.2.9 and will be removed in 1.0. An updated version of the class exists in the `langchain-chroma package and should be used instead. To use it run `pip install -U `langchain-chroma` and import as `from `langchain_chroma import Chroma``.\n",
       "  db = Chroma(\n"
      ]
     },
@@ -537,7 +713,7 @@
       "use. \n",
       "What is industrial IoT?\n",
       "\n",
-      "Source: D:\\OneDrive\\Documents\\CMI\\TinyMaqiq\\FDE_Training\\Project_Data\\Training_Session\\Vector_Rag\\data\\IOT.pdf\n",
+      "Source: C:\\Users\\vyanktesh.l\\Documents\\FDE\\FullStack\\FDE_first_web_App\\LABS-From-01December\\Vector_Rag\\data\\IOT.pdf\n",
       "\n",
       "\n",
       "--- Querying the Vector Store chroma_db_sent ---\n",
@@ -546,7 +722,7 @@
       "Document 1:\n",
       "why is internet of things ( iot ) so important? over the past few years, iot has become one of the most important technologies of the 21st century. now that we can connect everyday objects — kitchen appliances, cars, thermostats, baby monitors — to the internet via embedded devices, seamless communication is possible between people, processes, and things. by means of low - cost computing, the cloud, big data, analytics, and mobile technologies, physical things can share and collect data with minimal human intervention. in this hyperconnected world, digital systems can record, monitor, and adjust each interaction between connected things. the physical world meets the digital world — and they cooperate. what technologies have made iot possible? while the idea of iot has been in existence for a long time, a collection of recent advances in a number of different technologies has made it practical. access to low - cost, low - power sensor technology. affordable and reliable sensors are making iot technology possible for more manufacturers. connectivity. a host of network protocols for the internet has made it easy to connect sensors to the cloud and to other “ things ” for efficient data transfer. cloud computing platforms. the increase in the availability of cloud platforms enables both businesses and consumers to access the infrastructure they need to scale up without actually having to manage it all. machine learning and analytics. with advances in machine learning and analytics, along with access to varied and vast amounts of data stored in the cloud, businesses can gather insights faster and more easily. the emergence of these allied technologies continues to push the boundaries of iot and the data produced by iot also feeds these technologies. conversational artificial intelligence ( ai ). advances in neural networks have brought natural - language processing ( nlp ) to iot devices ( such as digital personal assistants alexa, cortana, and siri ) and made them appealing, affordable, and viable for\n",
       "\n",
-      "Source: D:\\OneDrive\\Documents\\CMI\\TinyMaqiq\\FDE_Training\\Project_Data\\Training_Session\\Vector_Rag\\data\\IOT.pdf\n",
+      "Source: C:\\Users\\vyanktesh.l\\Documents\\FDE\\FullStack\\FDE_first_web_App\\LABS-From-01December\\Vector_Rag\\data\\IOT.pdf\n",
       "\n",
       "\n",
       "--- Querying the Vector Store chroma_db_token ---\n",
@@ -587,7 +763,7 @@
       "use. \n",
       "What is industrial IoT?\n",
       "\n",
-      "Source: D:\\OneDrive\\Documents\\CMI\\TinyMaqiq\\FDE_Training\\Project_Data\\Training_Session\\Vector_Rag\\data\\IOT.pdf\n",
+      "Source: C:\\Users\\vyanktesh.l\\Documents\\FDE\\FullStack\\FDE_first_web_App\\LABS-From-01December\\Vector_Rag\\data\\IOT.pdf\n",
       "\n",
       "\n",
       "--- Querying the Vector Store chroma_db_rec_char ---\n",
@@ -609,7 +785,7 @@
       "continues to push the boundaries of IoT and the data produced by IoT also feeds these \n",
       "technologies.\n",
       "\n",
-      "Source: D:\\OneDrive\\Documents\\CMI\\TinyMaqiq\\FDE_Training\\Project_Data\\Training_Session\\Vector_Rag\\data\\IOT.pdf\n",
+      "Source: C:\\Users\\vyanktesh.l\\Documents\\FDE\\FullStack\\FDE_first_web_App\\LABS-From-01December\\Vector_Rag\\data\\IOT.pdf\n",
       "\n",
       "\n",
       "--- Querying the Vector Store chroma_db_custom ---\n",
@@ -650,7 +826,7 @@
       "use. \n",
       "What is industrial IoT?\n",
       "\n",
-      "Source: D:\\OneDrive\\Documents\\CMI\\TinyMaqiq\\FDE_Training\\Project_Data\\Training_Session\\Vector_Rag\\data\\IOT.pdf\n",
+      "Source: C:\\Users\\vyanktesh.l\\Documents\\FDE\\FullStack\\FDE_first_web_App\\LABS-From-01December\\Vector_Rag\\data\\IOT.pdf\n",
       "\n"
      ]
     }
@@ -702,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "40a5b18f-9e36-4cc6-a0cd-8e6e9759e858",
    "metadata": {},
    "outputs": [
@@ -717,7 +893,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\admin\\AppData\\Local\\Temp\\ipykernel_28056\\603221681.py:47: LangChainBetaWarning: The class `HTMLSemanticPreservingSplitter` is in beta. It is actively being worked on, so the API may change.\n",
+      "C:\\Users\\vyanktesh.l\\AppData\\Local\\Temp\\ipykernel_43180\\603221681.py:47: LangChainBetaWarning: The class `HTMLSemanticPreservingSplitter` is in beta. It is actively being worked on, so the API may change.\n",
       "  splitter = HTMLSemanticPreservingSplitter(\n"
      ]
     }
@@ -797,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "2cce6699-c806-4421-ae65-fd285309e476",
    "metadata": {},
    "outputs": [],
@@ -810,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "2490713b-b3a5-4236-990f-c7e6c850d086",
    "metadata": {},
    "outputs": [
@@ -821,7 +997,7 @@
        " Document(metadata={}, page_content='# Call the function\\nhello_world()')]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -881,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "e128d48c-08fd-4719-82fb-935e0b6977b9",
    "metadata": {},
    "outputs": [],
@@ -905,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "076d0f0f-ffa2-4959-8d52-dc452b3b0b9a",
    "metadata": {},
    "outputs": [],
@@ -920,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "59fda34a-a636-4265-bb09-c748ae8e5b79",
    "metadata": {},
    "outputs": [],
@@ -967,7 +1143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "314a7f22-204d-42cd-8d47-4fac87490d37",
    "metadata": {},
    "outputs": [],
@@ -983,7 +1159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "d9073b74-ae7a-47c2-b142-7cc14c1367ca",
    "metadata": {},
    "outputs": [],
@@ -1002,17 +1178,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "fafeccc3-f52c-42d4-8ef0-e602aaa728d9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Technologies that have made IoT possible include low-cost, low-power sensor technology for efficient data collection, various network protocols for seamless connectivity between devices, and cloud computing platforms that provide the necessary infrastructure. Additionally, advancements in machine learning and analytics allow for quicker insights, while conversational AI enhances the user experience with natural-language processing. These combined technologies create a robust ecosystem for IoT applications.'"
+       "'The technologies that have made IoT possible include low-cost, low-power sensor technology for affordable and reliable device connectivity, various network protocols for efficient data transfer, and cloud computing platforms that provide scalable infrastructure. Advances in machine learning and analytics allow for faster insights from the vast data collected. Additionally, developments in conversational artificial intelligence contribute to user-friendly IoT devices.'"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1047,7 +1223,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
